--- a/RealGuitarHero/app.json
+++ b/RealGuitarHero/app.json
@@ -11,7 +11,9 @@
       "resizeMode": "contain",
       "backgroundColor": "#1a1a2e"
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.realguitarhero.app",
@@ -25,12 +27,22 @@
         "backgroundColor": "#1a1a2e"
       },
       "package": "com.realguitarhero.app",
-      "permissions": ["android.permission.RECORD_AUDIO"]
+      "permissions": [
+        "android.permission.RECORD_AUDIO"
+      ]
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "scheme": "realguitarhero",
-    "plugins": ["expo-router"]
+    "plugins": [
+      "expo-router"
+    ],
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "72083400-1323-46c8-a19e-46e7c787c476"
+      }
+    }
   }
 }
