--- a/GuitarSlam/modules/audio-detection/expo-module.config.json
+++ b/GuitarSlam/modules/audio-detection/expo-module.config.json
@@ -4,6 +4,6 @@
     "modules": ["AudioDetectionModule"]
   },
   "android": {
-    "modules": ["com.realguitarhero.audiodetection.AudioDetectionModule"]
+    "modules": ["com.guitarslam.audiodetection.AudioDetectionModule"]
   }
 }
